database configuratios
