# docs/swagger.yaml
@@ -26,8 +26,6 @@ definitions:
         type: number
       requestedDate:
         type: string
-      requestedServerDate:
-        type: string
       state:
         type: string
     type: object
@@ -43,8 +41,6 @@ definitions:
         type: number
       requestedCreditLine:
         type: number
-      requestedDate:
-        type: string
     type: object
   models.CreditLineResponseBody:
     properties:
@@ -62,8 +58,6 @@ definitions:
         type: number
       requestedDate:
         type: string
-      requestedServerDate:
-        type: string
     type: object
   models.ResponseBody:
     properties:
@@ -77,23 +71,12 @@ definitions:
 host: localhost:8080
 info:
   contact: {}
-  description: This is a sample server.
-  title: Gin Swagger Example API
+  description: API that calculates a recommended creditLine for a Founding based on
+    its type and other fields.
+  title: The Credit Line API
   version: "1.0"
 paths:
   /creditLines:
-    get:
-      description: get all creditLines
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.CreditLine'
-            type: array
-      summary: Get all creditLines
-      tags:
-      - creditLine
     post:
       consumes:
       - application/json
@@ -113,21 +96,23 @@ paths:
       summary: Create a creditLine
       tags:
       - creditLine
-  /creditLines/{id}:
+  /creditLines/foundingName/{foundingName}:
     get:
-      description: Get a creditLine by id
+      description: Get all the creditLines requests a foundingName did
       parameters:
-      - description: creditLine ID
+      - description: creditLine foundingName
         in: path
-        name: id
+        name: foundingName
         required: true
         type: string
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.CreditLine'
-      summary: Get a creditLine by id
+            items:
+              $ref: '#/definitions/models.CreditLine'
+            type: array
+      summary: Get all the creditLines requests a foundingName did
       tags:
       - creditLine
 schemes:
